# rust-template

./: .editorconfig  Cargo.toml  README.md  clippy.toml  flake.nix  justfile
.claude/: settings.json
.claude/hooks/: rewrite-cargo-command.sh
.config/: nextest.toml
.githooks/: pre-commit
