[package]
name = "my-project"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("rust_lints"))'] }

[lints.clippy]
# Enable opt-in lint groups — individual entries below override these.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# --- Deny: always wrong in production ---
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
let_underscore_future = "deny"
rc_mutex = "deny"
exit = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# --- Error handling discipline ---
unwrap_used = "warn"
expect_used = "warn"
panic_in_result_fn = "warn"
unwrap_in_result = "warn"
map_err_ignore = "warn"

# --- Type safety & correctness ---
indexing_slicing = "warn"
panic = "warn"
option_option = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
float_cmp = "warn"

# --- Async & concurrency ---
large_futures = "warn"
mutex_atomic = "warn"

# --- Code quality & maintainability ---
wildcard_enum_match_arm = "warn"
clone_on_ref_ptr = "warn"
unused_result_ok = "warn"
let_underscore_must_use = "warn"
fn_params_excessive_bools = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"

# --- Documentation & design ---
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_fields_in_debug = "warn"
return_self_not_must_use = "warn"
should_panic_without_expect = "warn"
allow_attributes = "forbid"
allow_attributes_without_reason = "deny"
ignore_without_reason = "deny"

# --- Performance & idioms ---
unnecessary_wraps = "warn"
manual_let_else = "warn"
default_trait_access = "warn"
format_push_string = "warn"
unreadable_literal = "warn"

# --- Debug & print discipline ---
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# --- File & I/O operations ---
create_dir = "warn"
verbose_file_reads = "warn"
pathbuf_init_then_push = "warn"

# --- Resource management ---
mem_forget = "warn"
rc_buffer = "warn"
large_include_file = "warn"

# --- Miscellaneous ---
error_impl_error = "warn"
cfg_not_test = "warn"
missing_assert_message = "warn"
tests_outside_test_module = "warn"
ref_option = "warn"
large_types_passed_by_value = "warn"
unsafe_derive_deserialize = "warn"
large_stack_arrays = "warn"
doc_link_with_quotes = "warn"
copy_iterator = "warn"
macro_use_imports = "warn"

# --- Disabled: enabled by group but too noisy or harmful ---
module_name_repetitions = "allow"
option_if_let_else = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"

# --- Auto-fixable lints: silent during dev, auto-fixed at commit time ---
# complexity (103 lints)
bind_instead_of_map = "allow"
bool_comparison = "allow"
borrow_deref_ref = "allow"
bytes_count_to_len = "allow"
char_lit_as_u8 = "allow"
clone_on_copy = "allow"
default_constructed_unit_structs = "allow"
deprecated_cfg_attr = "allow"
deref_addrof = "allow"
derivable_impls = "allow"
double_comparisons = "allow"
double_parens = "allow"
duration_subsec = "allow"
explicit_auto_deref = "allow"
explicit_write = "allow"
extra_unused_type_parameters = "allow"
filter_map_identity = "allow"
filter_next = "allow"
flat_map_identity = "allow"
get_last_with_len = "allow"
identity_op = "allow"
implied_bounds_in_impls = "allow"
int_plus_one = "allow"
iter_count = "allow"
iter_kv_map = "allow"
let_with_type_underscore = "allow"
manual_abs_diff = "allow"
manual_c_str_literals = "allow"
manual_div_ceil = "allow"
manual_filter = "allow"
manual_filter_map = "allow"
manual_find = "allow"
manual_find_map = "allow"
manual_flatten = "allow"
manual_hash_one = "allow"
manual_inspect = "allow"
manual_is_multiple_of = "allow"
manual_main_separator_str = "allow"
manual_ok_err = "allow"
manual_option_as_slice = "allow"
manual_range_patterns = "allow"
manual_rem_euclid = "allow"
manual_slice_size_calculation = "allow"
manual_split_once = "allow"
manual_strip = "allow"
manual_swap = "allow"
manual_unwrap_or = "allow"
map_all_any_identity = "allow"
map_flatten = "allow"
map_identity = "allow"
match_as_ref = "allow"
match_single_binding = "allow"
needless_arbitrary_self_type = "allow"
needless_as_bytes = "allow"
needless_bool = "allow"
needless_bool_assign = "allow"
needless_borrowed_reference = "allow"
needless_ifs = "allow"
needless_lifetimes = "allow"
needless_match = "allow"
needless_option_as_deref = "allow"
needless_option_take = "allow"
needless_question_mark = "allow"
needless_splitn = "allow"
nonminimal_bool = "allow"
option_as_ref_deref = "allow"
option_filter_map = "allow"
option_map_unit_fn = "allow"
or_then_unwrap = "allow"
precedence = "allow"
ptr_offset_with_cast = "allow"
range_zip_with_len = "allow"
redundant_as_str = "allow"
redundant_async_block = "allow"
redundant_at_rest_pattern = "allow"
redundant_closure_call = "allow"
redundant_slicing = "allow"
repeat_once = "allow"
result_filter_map = "allow"
result_map_unit_fn = "allow"
seek_from_current = "allow"
seek_to_start_instead_of_rewind = "allow"
short_circuit_statement = "allow"
single_element_loop = "allow"
string_from_utf8_as_bytes = "allow"
strlen_on_c_strings = "allow"
swap_with_temporary = "allow"
transmute_ptr_to_ref = "allow"
transmutes_expressible_as_ptr_casts = "allow"
unit_arg = "allow"
unnecessary_cast = "allow"
unnecessary_first_then_check = "allow"
unnecessary_literal_unwrap = "allow"
unnecessary_map_on_constructor = "allow"
unnecessary_min_or_max = "allow"
unnecessary_operation = "allow"
unnecessary_sort_by = "allow"
unneeded_wildcard_pattern = "allow"
useless_asref = "allow"
useless_concat = "allow"
useless_conversion = "allow"
useless_format = "allow"
useless_nonzero_new_unchecked = "allow"
# correctness (7 lints)
inline_fn_without_body = "allow"
invisible_characters = "allow"
match_str_case_mismatch = "allow"
mem_replace_with_uninit = "allow"
never_loop = "allow"
non_octal_unix_permissions = "allow"
read_line_without_trim = "allow"
# nursery (19 lints)
clear_with_drain = "allow"
derive_partial_eq_without_eq = "allow"
equatable_if_let = "allow"
imprecise_flops = "allow"
missing_const_for_fn = "allow"
needless_collect = "allow"
needless_type_cast = "allow"
nonstandard_macro_braces = "allow"
redundant_clone = "allow"
redundant_pub_crate = "allow"
search_is_some = "allow"
string_lit_as_bytes = "allow"
suboptimal_flops = "allow"
suspicious_operation_groupings = "allow"
too_long_first_doc_paragraph = "allow"
trait_duplication_in_bounds = "allow"
unnecessary_struct_initialization = "allow"
unused_rounding = "allow"
use_self = "allow"
# pedantic (57 lints)
bool_to_int_with_if = "allow"
borrow_as_ptr = "allow"
cast_lossless = "allow"
checked_conversions = "allow"
cloned_instead_of_copied = "allow"
collapsible_else_if = "allow"
doc_comment_double_space_linebreaks = "allow"
doc_markdown = "allow"
elidable_lifetime_names = "allow"
enum_glob_use = "allow"
explicit_deref_methods = "allow"
explicit_into_iter_loop = "allow"
explicit_iter_loop = "allow"
filter_map_next = "allow"
flat_map_option = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
implicit_clone = "allow"
inconsistent_struct_constructor = "allow"
inefficient_to_string = "allow"
ip_constant = "allow"
manual_assert = "allow"
manual_ilog2 = "allow"
manual_instant_elapsed = "allow"
manual_is_power_of_two = "allow"
manual_is_variant_and = "allow"
manual_midpoint = "allow"
manual_string_new = "allow"
map_unwrap_or = "allow"
match_bool = "allow"
must_use_candidate = "allow"
needless_bitwise_bool = "allow"
needless_for_each = "allow"
needless_raw_string_hashes = "allow"
non_std_lazy_statics = "allow"
option_as_ref_cloned = "allow"
ptr_as_ptr = "allow"
ptr_cast_constness = "allow"
ptr_offset_by_literal = "allow"
range_minus_one = "allow"
range_plus_one = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
ref_as_ptr = "allow"
ref_binding_to_reference = "allow"
semicolon_if_nothing_returned = "allow"
single_char_pattern = "allow"
single_match_else = "allow"
stable_sort_primitive = "allow"
unchecked_time_subtraction = "allow"
unicode_not_nfc = "allow"
uninlined_format_args = "allow"
unnecessary_join = "allow"
unnecessary_literal_bound = "allow"
unnecessary_semicolon = "allow"
unnested_or_patterns = "allow"
wildcard_imports = "allow"
# perf (21 lints)
cmp_owned = "allow"
collapsible_str_replace = "allow"
double_ended_iterator_last = "allow"
drain_collect = "allow"
expect_fun_call = "allow"
extend_with_drain = "allow"
iter_overeager_cloned = "allow"
large_const_arrays = "allow"
manual_contains = "allow"
manual_ignore_case_cmp = "allow"
manual_retain = "allow"
manual_str_repeat = "allow"
map_entry = "allow"
missing_const_for_thread_local = "allow"
missing_spin_loop = "allow"
redundant_iter_cloned = "allow"
replace_box = "allow"
to_string_in_format_args = "allow"
unnecessary_to_owned = "allow"
useless_vec = "allow"
waker_clone_wake = "allow"
# restriction (26 lints)
alloc_instead_of_core = "allow"
as_pointer_underscore = "allow"
as_underscore = "allow"
assertions_on_result_states = "allow"
deref_by_slicing = "allow"
doc_include_without_cfg = "allow"
get_unwrap = "allow"
if_then_some_else_none = "allow"
lossy_float_literal = "allow"
missing_asserts_for_indexing = "allow"
needless_raw_strings = "allow"
non_ascii_literal = "allow"
non_zero_suggestions = "allow"
precedence_bits = "allow"
pub_with_shorthand = "allow"
rest_pat_in_fully_bound_structs = "allow"
return_and_then = "allow"
semicolon_outside_block = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
str_to_string = "allow"
string_lit_chars_any = "allow"
try_err = "allow"
unnecessary_safety_comment = "allow"
unseparated_literal_suffix = "allow"
unused_trait_names = "allow"
# style (108 lints)
assign_op_pattern = "allow"
blocks_in_conditions = "allow"
bool_assert_comparison = "allow"
box_default = "allow"
byte_char_slices = "allow"
bytes_nth = "allow"
chars_last_cmp = "allow"
chars_next_cmp = "allow"
cmp_null = "allow"
collapsible_if = "allow"
comparison_to_empty = "allow"
default_instead_of_iter_empty = "allow"
disallowed_methods = "allow"
disallowed_types = "allow"
doc_lazy_continuation = "allow"
err_expect = "allow"
excessive_precision = "allow"
filter_map_bool_then = "allow"
for_kv_map = "allow"
from_over_into = "allow"
get_first = "allow"
implicit_saturating_add = "allow"
implicit_saturating_sub = "allow"
infallible_destructuring_match = "allow"
init_numbered_fields = "allow"
into_iter_on_ref = "allow"
io_other_error = "allow"
is_digit_ascii_radix = "allow"
items_after_test_module = "allow"
iter_cloned_collect = "allow"
iter_next_slice = "allow"
iter_nth = "allow"
iter_nth_zero = "allow"
iter_skip_next = "allow"
len_zero = "allow"
let_and_return = "allow"
let_unit_value = "allow"
manual_async_fn = "allow"
manual_bits = "allow"
manual_dangling_ptr = "allow"
manual_is_ascii_check = "allow"
manual_is_infinite = "allow"
manual_map = "allow"
manual_next_back = "allow"
manual_ok_or = "allow"
manual_pattern_char_comparison = "allow"
manual_range_contains = "allow"
manual_repeat_n = "allow"
manual_rotate = "allow"
manual_saturating_arithmetic = "allow"
manual_while_let_some = "allow"
map_clone = "allow"
map_collect_result_unit = "allow"
match_ref_pats = "allow"
match_result_ok = "allow"
mem_replace_option_with_none = "allow"
mem_replace_option_with_some = "allow"
mem_replace_with_default = "allow"
missing_enforced_import_renames = "allow"
must_use_unit = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_else = "allow"
needless_late_init = "allow"
needless_parens_on_range_literals = "allow"
needless_pub_self = "allow"
needless_return = "allow"
needless_return_with_question_mark = "allow"
neg_multiply = "allow"
new_without_default = "allow"
obfuscated_if_else = "allow"
ok_expect = "allow"
op_ref = "allow"
option_map_or_none = "allow"
partialeq_to_none = "allow"
print_literal = "allow"
print_with_newline = "allow"
println_empty_string = "allow"
ptr_eq = "allow"
question_mark = "allow"
redundant_closure = "allow"
redundant_field_names = "allow"
redundant_pattern = "allow"
redundant_pattern_matching = "allow"
redundant_static_lifetimes = "allow"
result_map_or_into_option = "allow"
single_char_add_str = "allow"
single_component_path_imports = "allow"
single_match = "allow"
string_extend_chars = "allow"
to_digit_is_some = "allow"
toplevel_ref_arg = "allow"
trim_split_whitespace = "allow"
unnecessary_fallible_conversions = "allow"
unnecessary_fold = "allow"
unnecessary_lazy_evaluations = "allow"
unnecessary_map_or = "allow"
unnecessary_mut_passed = "allow"
unnecessary_owned_empty_strings = "allow"
unneeded_struct_pattern = "allow"
unused_enumerate_index = "allow"
unused_unit = "allow"
unwrap_or_default = "allow"
while_let_on_iterator = "allow"
write_literal = "allow"
write_with_newline = "allow"
writeln_empty_string = "allow"
zero_ptr = "allow"
# suspicious (12 lints)
cast_abs_to_unsigned = "allow"
cast_slice_from_raw_parts = "allow"
crate_in_macro_def = "allow"
deprecated_clippy_cfg_attr = "allow"
four_forward_slashes = "allow"
ineffective_open_options = "allow"
manual_unwrap_or_default = "allow"
needless_character_iteration = "allow"
swap_ptr_to_ref = "allow"
unnecessary_clippy_cfg = "allow"
unnecessary_option_map_or_else = "allow"
unnecessary_result_map_or_else = "allow"
